# AutoBook

./: .env.example  .gitignore  CLAUDE.md  Makefile  autobook.service  pyproject.toml
bot/: config.py  db.py  keyboards.py  main.py
bot/handlers/: admin.py  user.py
docs/plans/: 2026-03-01-admin-kick-on-seat-button-design.md  2026-03-01-admin-notifications-design.md  2026-03-01-systemd-service-design.md  2026-03-01-systemd-service.md
tests/: test_db.py  test_keyboards.py
